[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/galaxy-map/system-plot.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="SystemPlot" type="Node2D" groups=["system_plot"]]
z_index = 5
script = ExtResource( 1 )

[node name="ClickRegion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickRegion" groups=["plot"]]
shape = SubResource( 1 )

[connection signal="input_event" from="ClickRegion" to="." method="_on_ClickRegion_input_event"]
[connection signal="mouse_entered" from="ClickRegion" to="." method="_on_ClickRegion_mouse_entered"]
[connection signal="mouse_exited" from="ClickRegion" to="." method="_on_ClickRegion_mouse_exited"]
